# terracotta

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  build.gradle.kts  deployments.json  gradle.properties  index.html  mkdocs.yml  pyproject.toml  settings.gradle.kts  versions.json
.devin/: hooks.v1.json
0.1.0/: 404.html  index.html  sitemap.xml
0.1.1/: 404.html  index.html  sitemap.xml
0.1.2/: 404.html  index.html  sitemap.xml
0.1.4/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.1/: 404.html  index.html  sitemap.xml
0.5.0/: 404.html  index.html  sitemap.xml
0.6.0/: 404.html  index.html  sitemap.xml
0.7.0/: 404.html  index.html  sitemap.xml
0.7.1/: 404.html  index.html  sitemap.xml
0.8.0/: 404.html  index.html  macros.py  sitemap.xml
designs/: 25-07-10-add-auth-workflows.md  25-07-10-add-config-override-pattern.md  25-07-10-add-provider-curseforge.md  25-07-10-narrow-tags-canonical.md  25-07-12-add-config-validation.md  25-07-12-add-provider-github-release.md  26-07-11-add-cloud-terracotta.md  26-07-11-add-platform-viaversion-geyser.md  26-07-12-gallery-item-identity.md  TEMPLATE.md
docs/: CHANGELOG.md  index.md  last-changes.md  macros.py
gradle/: libs.versions.toml
guidelines/: changelog.md  diataxis.md
methodology/: README.md  module-bugfix-workflow.md  module-development-workflow.md  module-documentation-workflow.md  module-implementation-workflow.md  (+4 more)
(+5872 files in other folders)
