[project]
name = "terracotta"
version = "0.8.0"
description = "Declarative Minecraft project registry management tool"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.20.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-macros-plugin>=1.3.0",
    "questionary>=2.1.1",
    "mike>=2.1.3",
    "semver>=3.0.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-json-report>=1.5.0",
    "semver>=3.0.4",
]
